# RA-SynthGen

./: .gitignore  CLAUDE.md  README.md  env.example  pyproject.toml  run_cache_and_train.ps1
assets/: geometry_soft_bias.npy  radial_psf_calibrated.npy
data/: cache_dino_features.py  dataset.py  extract_from_records.py  extract_radial.py
inference/: augment_dataset.py  generate.py
models/: bbox_encoder.py  dit.py  psf_prior.py
scripts/: viz_samples.py
training/: config.py  loss.py  train.py
