[project]
name = "ra-synthgen"
version = "0.1.0"
description = "Synthetic Radar RA Map Generation via DiT + Conditional Flow Matching conditioned on 3D detections"
authors = [
    {name = "Ilyes"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy (>=2.4.1,<3.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "opencv-python (>=4.13.0.90,<5.0.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "scipy (>=1.17.0,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "torch (>=2.0.0,<3.0.0)",
    "torchvision (>=0.25.0,<0.26.0)",
    "transformers (>=5.0.0,<6.0.0)",
    "torchdiffeq (>=0.2.5,<0.3.0)",
    "einops (>=0.8.2,<0.9.0)",
    "tensorboard (>=2.14)",
    "cantools (>=41.3.0,<42.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
